# OpsBox

./: .gitignore  .pre-commit-config.yaml  CI_CD_SETUP.md  README.md  coverage.xml  main.py  pyproject.toml
.cursor/rules/: python-senior-developer.md  python-senior-test-engineer.md  readme_persona.mdc  version-bump.mdc
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  dependency-updater.yml  release.yml  version-bump-on-deps.yml
scripts/: build_check_mails.sh  build_db_backup.sh  build_encrypted_mail.sh  build_health_monitor.sh  build_kvm_snapshot_manager.sh  build_notifier.sh  build_restic_backup.sh  build_rsync_manager.sh  setup-dev.sh
src/opsbox/: __init__.py  exceptions.py  py.typed
src/opsbox/KVMSnapshotManager/: __init__.py  kvm_snapshot_manager.py
src/opsbox/backup/: __init__.py  backup_notifier.py  config.example.yaml  config_manager.py  exceptions.py  network_checker.py  password_manager.py  restic_backup.py  restic_client.py  restic_diff.py  scripts.py  snapshot_id.py  ssh_manager.py
src/opsbox/check_mails/: __init__.py  check_mails.py  config.example.yaml
src/opsbox/db_snapshot/: __init__.py  db_backup.py  env.example
src/opsbox/encrypted_mail/: __init__.py  email_settings.example.json  email_settings.example.yaml  encrypted_mail.py
src/opsbox/health_monitor/: __init__.py  config.example.yaml  health_monitor.py
src/opsbox/locking/: __init__.py  lock_manager.py
src/opsbox/logging/: __init__.py  logger_setup.py
src/opsbox/mail/: __init__.py  encryption.py
src/opsbox/notifier/: __init__.py  exceptions.py  notifier.py
src/opsbox/rsync/: __init__.py  config.example.yaml  rsync-manager.py  rsync_manager.py
src/opsbox/utils/: __init__.py  common.py
tests/: __init__.py  test_encrypted_mail.py  test_lock_manager.py  test_logging.py
tests/backup/: test_backup_notifier.py  test_config_manager.py  test_network_checker.py  test_password_manager.py  test_restic_backup.py  test_restic_client.py  test_restic_diff.py  test_snapshot_id.py  test_ssh_manager.py
tests/check_mails/: __init__.py  test_config_manager.py  test_email_checker.py
tests/db_snapshot/: __init__.py  test_db_backup.py
tests/file_integrity/: __init__.py
tests/health_monitor/: __init__.py  test_health_monitor.py  test_health_monitor_config.py
tests/kvm_snapshot_manager/: __init__.py  test_kvm_snapshot_manager.py
tests/notifier/: __init__.py  test_notifier.py
tests/rsync/: __init__.py  test_rsync_manager.py
tests/sync_health/: __init__.py
tests/test_backup/: __init__.py  scripts_test.py
tests/test_mail/: __init__.py
tests/test_utils/: common_test.py
